Fixed overflow on frontpage

--- a/src/main/resources/static/css/frontpage.css
+++ b/src/main/resources/static/css/frontpage.css
@@ -2,3 +2,8 @@ footer
 {
     position:fixed;
 }
+
+body
+{
+    overflow-y: hidden;
+}
